# PythonProject.

./: .coverage  .gitignore  README.md  pyproject.toml
pytest/: conftest.py  test.py
src/: generators.py  masks.py  processing.py  widget.py
tests/: test_masks.py
